<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="700dp"
        tools:context=".ui.admin.user.WarehouseDetailFragment">

        <TextView
            android:id="@+id/finalTxtOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/colorAccent"
            android:text="@string/order_number" />

        <TextView
            android:id="@+id/txtOrderNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="155dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/colorAccent"
            android:text="txtOrderNumber" />

        <TextView
            android:id="@+id/finalTxtReason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/colorAccent"
            android:text="@string/reason" />

        <Spinner
            android:id="@+id/spnReason"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="97dp" />

        <TextView
            android:id="@+id/finalTxtDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="150dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/colorAccent"
            android:text="@string/description" />

        <EditText
            android:id="@+id/editReason"
            android:layout_width="325dp"
            android:layout_height="300dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="180dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/colorAccent"
            android:ems="10"
            android:gravity="start|top"
            android:hint="What Could Have Possibly Gone Wrong?"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="325dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="500dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/montserrat"
            android:textColor="@android:color/white"
            android:text="@string/btnsubmit" />
            android:textColor="@android:color/white" />
    </RelativeLayout>
</ScrollView>