<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.SignUpActivity"
  android:background="@drawable/gradient_background">

  <android.support.v7.widget.Toolbar
    android:id="@+id/signUpToolBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?attr/actionBarSize"
    android:background="@color/colorToolbarBackground"
    app:title="Sign up"
    app:titleTextAppearance="@style/ActionBar.nameText"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:navigationIcon="@drawable/back_arrow_clipart" />

  <android.support.constraint.Guideline
    android:id="@+id/fieldsGuideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.16" />

  <EditText
      android:id="@+id/editCapacity"
      android:layout_width="325dp"
      android:layout_height="43dp"
      android:layout_marginTop="180dp"
      android:background="@drawable/edit_background"
      android:drawableStart="@drawable/hide_password_clipart"
      android:ems="10"
      android:inputType="textPassword"
      android:paddingStart="@dimen/editPaddingLeftRightIcon"
      android:paddingEnd="@dimen/editPaddingLeftRightIcon"
      android:fontFamily="@font/montserrat"
      android:textColor="@android:color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/fieldsGuideline" />

  <TextView
      android:id="@+id/txtCapacity"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/montserrat"
      android:text="@string/txtPassword"
      android:textColor="@android:color/white"
      android:textSize="@dimen/txtInput"
      app:layout_constraintBottom_toTopOf="@+id/editPassword"
      app:layout_constraintStart_toStartOf="@+id/editPassword" />

  <TextView
      android:id="@+id/txtQuestion"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/montserrat"
      android:text="@string/txtQuestion"
      android:textColor="@android:color/white"
      android:textSize="@dimen/txtInput"
      app:layout_constraintBottom_toTopOf="@+id/spinnerRoles"
      app:layout_constraintStart_toStartOf="@+id/spinnerRoles" />

  <EditText
      android:id="@+id/editLocation"
      android:layout_width="325dp"
      android:layout_height="43dp"
      android:layout_marginTop="90dp"
      android:background="@drawable/edit_background"
      android:drawableStart="@drawable/email_white_clipart"
      android:ems="10"
      android:inputType="textEmailAddress"
      android:paddingStart="@dimen/editPaddingLeftRightIcon"
      android:paddingEnd="@dimen/editPaddingLeftRightIcon"
      android:fontFamily="@font/montserrat"
      android:textColor="@android:color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/fieldsGuideline" />

  <TextView
    android:id="@+id/txtLocation"
    android:layout_width="121dp"
    android:layout_height="24dp"
    android:fontFamily="@font/montserrat"
    android:text="@string/txtUsername"
    android:textColor="@android:color/white"
    android:textSize="@dimen/txtInput"
    app:layout_constraintBottom_toTopOf="@+id/editUsername"
    app:layout_constraintStart_toStartOf="@+id/editUsername" />

  <android.support.constraint.Guideline
      android:id="@+id/guideline3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_end="100dp" />

  <TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="@font/montserrat"
    android:text="@string/txtName"
    android:textColor="@android:color/white"
    android:textSize="@dimen/txtInput"
    app:layout_constraintBottom_toTopOf="@+id/editName"
    app:layout_constraintStart_toStartOf="@+id/editName" />

  <EditText
      android:id="@+id/editName"
      android:layout_width="325dp"
      android:layout_height="43dp"
      android:background="@drawable/edit_background"
      android:drawableStart="@drawable/name_white_clipart"
      android:ems="10"
      android:inputType="textPersonName"
      android:onClick="onSignUp"
      android:paddingStart="@dimen/editPaddingLeftRightIcon"
      android:paddingEnd="@dimen/editPaddingLeftRightIcon"
      android:textColor="@android:color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/fieldsGuideline" />

  <Button
    android:id="@+id/btnSignUp"
    android:layout_width="325dp"
    android:layout_height="52dp"
    android:background="@color/colorPrimaryDark"
    android:text="@string/btnSignUp"
    android:textColor="@android:color/white"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guideline3"
    android:onClick="onSignUp"/>

  <Spinner
      android:id="@+id/spinnerRoles"
      android:layout_width="325dp"
      android:layout_height="43dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="270dp"
      android:layout_marginEnd="8dp"
      android:background="@drawable/edit_background"
      android:popupBackground="@color/colorGradient2"
      android:textColor="@android:color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/editName" />

  <TextView
      android:id="@+id/txtAnswer"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/montserrat"
      android:text="@string/txtAnswer"
      android:textColor="@android:color/white"
      android:textSize="@dimen/txtInput"
      app:layout_constraintBottom_toTopOf="@+id/editAnswer"
      app:layout_constraintStart_toStartOf="@+id/editAnswer" />

  <EditText
      android:id="@+id/editAnswer"
      android:layout_width="325dp"
      android:layout_height="43dp"
      android:layout_marginTop="360dp"
      android:fontFamily="@font/montserrat"
      android:background="@drawable/edit_background"
      android:ems="10"
      android:inputType="textPersonName"
      android:onClick="onSignUp"
      android:paddingStart="15dp"
      android:paddingEnd="@dimen/editPaddingLeftRightIcon"
      android:textColor="@android:color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/fieldsGuideline" />

</android.support.constraint.ConstraintLayout>